--- a/templates/login.html
+++ b/templates/login.html
@@ -25,7 +25,7 @@
                         {% endif %}
                     {% endwith %}
                 </div>
-             Don't have an account? <a href="http://AndrewGoldmann.pythonanywhere.com/register"> Click here to register! </a>
+             Don't have an account? <a href="/register"> Click here to register! </a>
             </span>
         </div>
 </body>
