--- a/templates/register.html
+++ b/templates/register.html
@@ -26,7 +26,7 @@
                         {% endif %}
                     {% endwith %}
                 </div>
-                Already have an acount? <a href="http://AndrewGoldmann.pythonanywhere.com/login"> Click here to login! </a>
+                Already have an acount? <a href="/login"> Click here to login! </a>
             </span>
         </div>
 </body>
